@@ -10,10 +10,11 @@ import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
-import static uk.gov.justice.laa.dstew.access.service.application.sharedAsserts.IndividualAssert.assertIndividualCollectionsEqual;
+import static uk.gov.justice.laa.dstew.access.service.application.sharedAsserts.
+        ApplicationCreateRequestIndividualAssert.assertIndividualCollectionsEqual;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
 import java.time.Instant;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
@@ -26,53 +27,63 @@ import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.ArgumentCaptor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authorization.AuthorizationDeniedException;
+import tools.jackson.core.JacksonException;
 import uk.gov.justice.laa.dstew.access.entity.ApplicationEntity;
 import uk.gov.justice.laa.dstew.access.entity.DomainEventEntity;
 import uk.gov.justice.laa.dstew.access.entity.ProceedingEntity;
+import uk.gov.justice.laa.dstew.access.exception.ResourceNotFoundException;
 import uk.gov.justice.laa.dstew.access.mapper.MapperUtil;
 import uk.gov.justice.laa.dstew.access.model.ApplicationContent;
 import uk.gov.justice.laa.dstew.access.model.ApplicationCreateRequest;
 import uk.gov.justice.laa.dstew.access.model.ApplicationStatus;
 import uk.gov.justice.laa.dstew.access.model.CreateApplicationDomainEventDetails;
 import uk.gov.justice.laa.dstew.access.model.DomainEventType;
+import uk.gov.justice.laa.dstew.access.model.LinkedApplication;
 import uk.gov.justice.laa.dstew.access.model.Proceeding;
-import uk.gov.justice.laa.dstew.access.model.RequestApplicationContent;
+import uk.gov.justice.laa.dstew.access.model.ServiceName;
 import uk.gov.justice.laa.dstew.access.service.ApplicationService;
 import uk.gov.justice.laa.dstew.access.utils.BaseServiceTest;
 import uk.gov.justice.laa.dstew.access.utils.TestConstants;
+import uk.gov.justice.laa.dstew.access.utils.generator.DataGenerator;
+import uk.gov.justice.laa.dstew.access.utils.generator.application.ApplicationContentGenerator;
+import uk.gov.justice.laa.dstew.access.utils.generator.application.ApplicationCreateRequestGenerator;
+import uk.gov.justice.laa.dstew.access.utils.generator.application.ApplicationEntityGenerator;
+import uk.gov.justice.laa.dstew.access.utils.generator.application.LinkedApplicationsGenerator;
+import uk.gov.justice.laa.dstew.access.utils.generator.proceeding.ProceedingGenerator;
 import uk.gov.justice.laa.dstew.access.validation.ValidationException;
 
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
 public class CreateApplicationTest extends BaseServiceTest {
 
-    @Autowired
-    private ApplicationService serviceUnderTest;
+  @Autowired
+  private ApplicationService serviceUnderTest;
 
-    @Test
-    public void givenNewApplication_whenCreateApplication_thenReturnNewId() throws JsonProcessingException {
+  @Test
+  public void givenNewApplication_whenCreateApplication_thenReturnNewId() throws JacksonException {
 
     // given
     UUID expectedId = UUID.randomUUID();
-    ApplicationEntity withExpectedId = applicationEntityFactory.createDefault(builder ->
-        builder.id(expectedId).isAutoGranted(null)
+    ApplicationEntity withExpectedId = DataGenerator.createDefault(ApplicationEntityGenerator.class, builder ->
+        builder.id(expectedId)
     );
 
-    ApplicationCreateRequest applicationCreateRequest = applicationCreateRequestFactory.createDefault();
-    RequestApplicationContent requestApplicationContent = MapperUtil.getObjectMapper()
-        .convertValue(applicationCreateRequest.getApplicationContent(), RequestApplicationContent.class);
+    ApplicationCreateRequest applicationCreateRequest = DataGenerator.createDefault(ApplicationCreateRequestGenerator.class);
+    ApplicationContent applicationContent = MapperUtil.getObjectMapper()
+        .convertValue(applicationCreateRequest.getApplicationContent(), ApplicationContent.class);
     when(applicationRepository.save(any())).thenReturn(withExpectedId);
 
-        DomainEventEntity expectedDomainEvent = DomainEventEntity.builder()
-                .applicationId(expectedId)
-                .type(DomainEventType.APPLICATION_CREATED)
-                .data(objectMapper.writeValueAsString(CreateApplicationDomainEventDetails.builder()
-                        .applicationId(expectedId)
-                        .applicationStatus(ApplicationStatus.APPLICATION_IN_PROGRESS.toString())
-                        .applicationContent(withExpectedId.getApplicationContent().toString())
-                        .build()))
-                .build();
+    DomainEventEntity expectedDomainEvent = DomainEventEntity.builder()
+        .applicationId(expectedId)
+        .type(DomainEventType.APPLICATION_CREATED)
+        .data(objectMapper.writeValueAsString(CreateApplicationDomainEventDetails.builder()
+            .applicationId(expectedId)
+            .laaReference(withExpectedId.getLaaReference())
+            .applicationStatus(ApplicationStatus.APPLICATION_IN_PROGRESS.toString())
+            .request(objectMapper.writeValueAsString(applicationCreateRequest))
+            .build()))
+        .build();
 
-    setSecurityContext(TestConstants.Roles.WRITER);
+    setSecurityContext(TestConstants.Roles.CASEWORKER);
 
     // when
     UUID actualId = serviceUnderTest.createApplication(applicationCreateRequest);
@@ -81,19 +92,144 @@ public class CreateApplicationTest extends BaseServiceTest {
     assertEquals(expectedId, actualId);
 
     verifyThatApplicationSaved(applicationCreateRequest, 1);
-    verifyThatProceedingsSaved(requestApplicationContent, expectedId);
+    verifyThatProceedingsSaved(applicationContent, expectedId);
     verifyThatCreateDomainEventSaved(expectedDomainEvent, 1);
   }
 
-  private void verifyThatProceedingsSaved(RequestApplicationContent applicationCreateRequest, UUID expectedId) {
+  @Test
+  public void givenNewApplicationWithLinkedApplication_whenCreateApplication_thenReturnNewId() throws JacksonException {
+
+    // given
+    UUID expectedId = UUID.randomUUID();
+    UUID applyApplicationId = UUID.randomUUID();
+    UUID associatedApplicationId = UUID.randomUUID();
+
+    ApplicationContent applicationContent = DataGenerator.createDefault(ApplicationContentGenerator.class, appContentBuilder ->
+        appContentBuilder.id(associatedApplicationId)
+            .allLinkedApplications(createLinkedApplications(applyApplicationId, List.of(associatedApplicationId))));
+
+    ApplicationCreateRequest applicationCreateRequest = DataGenerator.createDefault(ApplicationCreateRequestGenerator.class, builder ->
+        builder.applicationContent(objectMapper.convertValue(applicationContent, Map.class)));
+
+    ApplicationEntity withExpectedId = DataGenerator.createDefault(ApplicationEntityGenerator.class, builder ->
+        builder.id(expectedId).applicationContent(objectMapper.convertValue(applicationContent, Map.class)).isAutoGranted(null)
+    );
+    ApplicationEntity leadApplication = DataGenerator.createDefault(ApplicationEntityGenerator.class,
+        builder -> builder.applyApplicationId(applyApplicationId));
+    when(applicationRepository.findByApplyApplicationId(applyApplicationId))
+        .thenReturn(leadApplication);
+    when(applicationRepository.save(any())).thenReturn(withExpectedId);
+    DomainEventEntity expectedDomainEvent = DomainEventEntity.builder()
+        .applicationId(expectedId)
+        .type(DomainEventType.APPLICATION_CREATED)
+        .data(objectMapper.writeValueAsString(CreateApplicationDomainEventDetails.builder()
+            .applicationId(expectedId)
+            .laaReference(withExpectedId.getLaaReference())
+            .applicationStatus(ApplicationStatus.APPLICATION_IN_PROGRESS.toString())
+            .request(objectMapper.writeValueAsString(applicationCreateRequest))
+            .build()))
+        .build();
+
+    setSecurityContext(TestConstants.Roles.CASEWORKER);
+
+    // when
+    UUID actualId = serviceUnderTest.createApplication(applicationCreateRequest);
+
+    // then
+    assertEquals(expectedId, actualId);
+
+    verifyThatApplicationSaved(applicationCreateRequest, 2);
+    verifyThatProceedingsSaved(applicationContent, expectedId);
+    verifyThatCreateDomainEventSaved(expectedDomainEvent, 1);
+  }
+
+  @Test
+  public void givenNewApplicationWithLinkedApplication_throwExceptionWhenMissingLeadApplication()
+      throws JacksonException {
+
+    // given
+    UUID expectedId = UUID.randomUUID();
+    UUID applyApplicationId = UUID.randomUUID();
+    UUID associatedApplicationId = UUID.randomUUID();
+
+    ApplicationContent applicationContent = DataGenerator.createDefault(ApplicationContentGenerator.class, appContentBuilder ->
+        appContentBuilder.id(associatedApplicationId)
+            .allLinkedApplications(createLinkedApplications(applyApplicationId, List.of(associatedApplicationId))));
+
+    ApplicationCreateRequest applicationCreateRequest = DataGenerator.createDefault(ApplicationCreateRequestGenerator.class, builder ->
+        builder.applicationContent(objectMapper.convertValue(applicationContent, Map.class)));
+
+    ApplicationEntity withExpectedId = DataGenerator.createDefault(ApplicationEntityGenerator.class, builder ->
+        builder.id(expectedId).applicationContent(objectMapper.convertValue(applicationContent, Map.class)).isAutoGranted(null)
+    );
+    when(applicationRepository.findByApplyApplicationId(applyApplicationId))
+        .thenReturn(null);
+    when(applicationRepository.save(any())).thenReturn(withExpectedId);
+    setSecurityContext(TestConstants.Roles.CASEWORKER);
+
+    // when
+    assertThatExceptionOfType(ResourceNotFoundException.class)
+        .isThrownBy(() -> serviceUnderTest.createApplication(applicationCreateRequest))
+        .withMessageContaining("Linking failed > Lead application not found, ID: " + applyApplicationId);
+  }
+
+  @Test
+  public void givenNewApplicationWithLinkedApplication_throwExceptionWhenMissingAssociatedApplication()
+      throws JacksonException {
+
+    // given
+    UUID expectedId = UUID.randomUUID();
+    UUID applyApplicationId = UUID.randomUUID();
+    UUID associatedApplicationId = UUID.randomUUID();
+    UUID otherAssociatedApplication = UUID.randomUUID();
+
+    List<LinkedApplication> linkedApplications =
+        createLinkedApplications(applyApplicationId, List.of(associatedApplicationId, otherAssociatedApplication));
+
+    ApplicationContent applicationContent = DataGenerator.createDefault(ApplicationContentGenerator.class, appContentBuilder ->
+        appContentBuilder.id(associatedApplicationId).allLinkedApplications(linkedApplications));
+
+    ApplicationCreateRequest applicationCreateRequest = DataGenerator.createDefault(ApplicationCreateRequestGenerator.class, builder ->
+        builder.applicationContent(objectMapper.convertValue(applicationContent, Map.class)));
+
+    ApplicationEntity withExpectedId = DataGenerator.createDefault(ApplicationEntityGenerator.class, builder ->
+        builder.id(expectedId).applicationContent(objectMapper.convertValue(applicationContent, Map.class)).isAutoGranted(null)
+    );
+
+    ApplicationEntity leadApplication = DataGenerator.createDefault(ApplicationEntityGenerator.class,
+        builder -> builder.applyApplicationId(applyApplicationId));
+    when(applicationRepository.findByApplyApplicationId(applyApplicationId))
+        .thenReturn(leadApplication);
+
+    when(applicationRepository.findByApplyApplicationId(otherAssociatedApplication))
+        .thenReturn(null);
+    when(applicationRepository.save(any())).thenReturn(withExpectedId);
+    setSecurityContext(TestConstants.Roles.CASEWORKER);
+
+    // when
+    assertThatExceptionOfType(ResourceNotFoundException.class)
+        .isThrownBy(() -> serviceUnderTest.createApplication(applicationCreateRequest))
+        .withMessageContaining("No linked application found with associated apply ids: " + List.of(otherAssociatedApplication));
+  }
+
+  private List<LinkedApplication> createLinkedApplications(UUID leadApplicationId, List<UUID> associatedApplicationIds) {
+    List<LinkedApplication> linkedApplications = new ArrayList<>();
+    for (UUID associatedApplicationId : associatedApplicationIds) {
+      linkedApplications.add(DataGenerator.createDefault(LinkedApplicationsGenerator.class,
+          builder -> builder.leadApplicationId(leadApplicationId).associatedApplicationId(associatedApplicationId)));
+    }
+    return linkedApplications;
+  }
+
+  private void verifyThatProceedingsSaved(ApplicationContent applicationCreateRequest, UUID expectedId) {
     ArgumentCaptor<List<ProceedingEntity>> captor = ArgumentCaptor.forClass((Class) List.class);
     verify(proceedingRepository).saveAll(captor.capture());
     List<ProceedingEntity> actualProceedingEntities = captor.getValue();
 
-    RequestApplicationContent applicationContentDetails =
-        objectMapper.convertValue(applicationCreateRequest, RequestApplicationContent.class);
+    ApplicationContent applicationContentDetails =
+        objectMapper.convertValue(applicationCreateRequest, ApplicationContent.class);
 
-    List<Proceeding> expectedProceedings = applicationContentDetails.getApplicationContent().getProceedings();
+    List<Proceeding> expectedProceedings = applicationContentDetails.getProceedings();
 
     assertEquals(expectedProceedings.size(), actualProceedingEntities.size());
     for (int index = 0; index < expectedProceedings.size(); index++) {
@@ -102,7 +238,8 @@ public class CreateApplicationTest extends BaseServiceTest {
 
       assertThat(actualProceedingEntity.getApplicationId()).isEqualTo(expectedId);
       assertThat(actualProceedingEntity.isLead()).isEqualTo(expectedProceeding.getLeadProceeding());
-      assertThat(actualProceedingEntity.getProceedingContent()).isEqualTo(objectMapper.convertValue(expectedProceeding, Map.class));
+      assertThat(actualProceedingEntity.getProceedingContent()).isEqualTo(
+          objectMapper.convertValue(expectedProceeding, Map.class));
     }
   }
 
@@ -112,10 +249,10 @@ public class CreateApplicationTest extends BaseServiceTest {
   void mapToApplicationEntity_SuccessfullyMapFromApplicationContentFields(ApplicationCreateRequest application,
                                                                           boolean expectedUseDelegatedFunctions) {
     // Given
-    setSecurityContext(TestConstants.Roles.WRITER);
+    setSecurityContext(TestConstants.Roles.CASEWORKER);
 
     UUID expectedId = UUID.randomUUID();
-    ApplicationEntity withExpectedId = applicationEntityFactory.createDefault(builder -> builder.id(expectedId));
+    ApplicationEntity withExpectedId = DataGenerator.createDefault(ApplicationEntityGenerator.class, builder -> builder.id(expectedId));
     when(applicationRepository.save(any())).thenReturn(withExpectedId);
 
     // When
@@ -129,7 +266,7 @@ public class CreateApplicationTest extends BaseServiceTest {
     assertAll(() -> assertEquals(expectedUseDelegatedFunctions, actualApplicationEntity.getUsedDelegatedFunctions()),
         () -> assertEquals(Instant.parse("2026-01-15T10:20:30Z"), actualApplicationEntity.getSubmittedAt()));
     verifyThatProceedingsSaved(
-        objectMapper.convertValue(application.getApplicationContent(), RequestApplicationContent.class),
+        objectMapper.convertValue(application.getApplicationContent(), ApplicationContent.class),
         expectedId);
   }
 
@@ -141,7 +278,7 @@ public class CreateApplicationTest extends BaseServiceTest {
     // when
     // then
     assertThatExceptionOfType(AuthorizationDeniedException.class)
-        .isThrownBy(() -> serviceUnderTest.createApplication(applicationCreateRequestFactory.createDefault()))
+        .isThrownBy(() -> serviceUnderTest.createApplication(DataGenerator.createDefault(ApplicationCreateRequestGenerator.class)))
         .withMessageContaining("Access Denied");
 
     verify(applicationRepository, times(0)).findById(any(UUID.class));
@@ -152,20 +289,49 @@ public class CreateApplicationTest extends BaseServiceTest {
   public void givenNewApplicationAndNoRole_whenCreateApplication_thenThrowUnauthorizedException() {
 
     assertThatExceptionOfType(AuthorizationDeniedException.class)
-        .isThrownBy(() -> serviceUnderTest.createApplication(applicationCreateRequestFactory.createDefault()))
+        .isThrownBy(() -> serviceUnderTest.createApplication(DataGenerator.createDefault(ApplicationCreateRequestGenerator.class)))
         .withMessageContaining("Access Denied");
 
     verify(applicationRepository, times(0)).findById(any(UUID.class));
     verify(domainEventRepository, never()).save(any());
   }
 
-    @ParameterizedTest
-    @MethodSource("invalidApplicationRequests")
-    public void GivenInvalidApplicationAndRoleWriter_whenCreateApplication_thenValidationExceptionWithCorrectMessage(
-            ApplicationCreateRequest applicationCreateRequest,
-            ValidationException validationException
-    ) {
-        setSecurityContext(TestConstants.Roles.WRITER);
+  @Test
+  public void givenDuplicateApplyApplicationId_whenCreateApplication_thenThrowValidationException() {
+    // given
+    setSecurityContext(TestConstants.Roles.CASEWORKER);
+
+    UUID applyApplicationId = UUID.randomUUID();
+
+    ApplicationContent applicationContent =
+        DataGenerator.createDefault(ApplicationContentGenerator.class, builder -> builder.id(applyApplicationId));
+
+    ApplicationCreateRequest applicationCreateRequest = DataGenerator.createDefault(ApplicationCreateRequestGenerator.class, builder ->
+        builder.applicationContent(objectMapper.convertValue(applicationContent, Map.class)));
+
+    ValidationException validationException = new ValidationException(
+        List.of("Application already exists for Apply Application Id: " + applyApplicationId)
+    );
+
+    when(applicationRepository.existsByApplyApplicationId(applyApplicationId)).thenReturn(true);
+
+    // when
+    Throwable throwable = catchThrowable(() -> serviceUnderTest.createApplication(applicationCreateRequest));
+
+    //then
+    assertThat(throwable)
+        .isInstanceOf(ValidationException.class)
+        .usingRecursiveComparison()
+        .isEqualTo(validationException);
+  }
+
+  @ParameterizedTest
+  @MethodSource("invalidApplicationRequests")
+  public void GivenInvalidApplicationAndRoleWriter_whenCreateApplication_thenValidationExceptionWithCorrectMessage(
+      ApplicationCreateRequest applicationCreateRequest,
+      ValidationException validationException
+  ) {
+    setSecurityContext(TestConstants.Roles.CASEWORKER);
 
         Throwable thrown = catchThrowable(() -> serviceUnderTest.createApplication(applicationCreateRequest));
         assertThat(thrown)
@@ -178,17 +344,16 @@ public class CreateApplicationTest extends BaseServiceTest {
         verify(domainEventRepository, never()).save(any());
     }
 
-
   private Stream<Arguments> invalidApplicationRequests() {
     ValidationException validationException = new ValidationException(List.of(
         "No lead proceeding found in application content"
     ));
-    ApplicationCreateRequest createRequest = applicationCreateRequestFactory.createDefault(builder -> builder
-        .applicationContent(objectMapper.convertValue(requestApplicationContentFactory.createDefault(
-            detailsBuilder -> detailsBuilder.applicationContent(
-                applicationContentFactory.createDefault(appContentBuilder ->
-                    appContentBuilder.proceedings(List.of(proceedingFactory.createDefault(proceedingBuilder ->
-                        proceedingBuilder.leadProceeding(false))))))), Map.class)));
+
+    ApplicationContent applicationContent = DataGenerator.createDefault(ApplicationContentGenerator.class, appContentBuilder ->
+        appContentBuilder.proceedings(List.of(DataGenerator.createDefault(ProceedingGenerator.class, proceedingBuilder ->
+            proceedingBuilder.leadProceeding(false)))));
+    ApplicationCreateRequest createRequest = DataGenerator.createDefault(ApplicationCreateRequestGenerator.class, builder -> builder
+        .applicationContent(objectMapper.convertValue(applicationContent, Map.class)));
     return Stream.of(
         Arguments.of(
             createRequest, validationException
@@ -196,40 +361,36 @@ public class CreateApplicationTest extends BaseServiceTest {
   }
 
   private Map<String, Object> getAppContentParent(List<Proceeding> proceedings,
-                                                        String appContentId) {
+                                                  String appContentId) {
 
-
-    ApplicationContent applicationContent = applicationContentFactory.createDefault(appContentBuilder ->
+    ApplicationContent applicationContent = DataGenerator.createDefault(ApplicationContentGenerator.class, appContentBuilder ->
         appContentBuilder.submittedAt("2026-01-15T10:20:30Z").proceedings(proceedings).id(UUID.fromString(appContentId)));
 
-    RequestApplicationContent requestApplicationContent =
-        requestApplicationContentFactory.createDefault(builder -> builder.applicationContent(applicationContent));
-    requestApplicationContent.putAdditionalProperty("testPropertyInTest", "testValue");
-    return objectMapper.convertValue(requestApplicationContent, Map.class);
+    applicationContent.putAdditionalApplicationContent("testPropertyInTest", "testValue");
+    return objectMapper.convertValue(applicationContent, Map.class);
 
   }
 
   private Proceeding getProceeding(Boolean useDelegatedFunctions, boolean leadProceeding) {
-
-    return proceedingFactory.createDefault(
+    return DataGenerator.createDefault(ProceedingGenerator.class,
         builder -> builder.leadProceeding(leadProceeding).usedDelegatedFunctions(useDelegatedFunctions));
   }
 
   private Stream<Arguments> provideProceedingsForMapping() {
     //App Content Map, expected usedDelegatedFunctions
     return Stream.of(
-        Arguments.of(applicationCreateRequestFactory.createDefault(
+        Arguments.of(DataGenerator.createDefault(ApplicationCreateRequestGenerator.class,
             builder -> builder.applicationContent(getAppContentParent(List.of(getProceeding(true, true)),
                 UUID.randomUUID().toString()))), true),
-        Arguments.of(applicationCreateRequestFactory.createDefault(
+        Arguments.of(DataGenerator.createDefault(ApplicationCreateRequestGenerator.class,
                 builder -> builder.applicationContent(getAppContentParent(List.of(getProceeding(false, true)),
                     UUID.randomUUID().toString()))), false,
             true), Arguments.of(
-            applicationCreateRequestFactory.createDefault(builder -> builder.applicationContent(
+            DataGenerator.createDefault(ApplicationCreateRequestGenerator.class, builder -> builder.applicationContent(
                 getAppContentParent(List.of(getProceeding(false, true), getProceeding(true, false)),
                     UUID.randomUUID().toString()))), true,
             true), Arguments.of(
-            applicationCreateRequestFactory.createDefault(builder -> builder.applicationContent(
+            DataGenerator.createDefault(ApplicationCreateRequestGenerator.class, builder -> builder.applicationContent(
                 getAppContentParent(List.of(getProceeding(false, true), getProceeding(false, false)),
                     UUID.randomUUID().toString()))), false,
             true));
@@ -239,16 +400,18 @@ public class CreateApplicationTest extends BaseServiceTest {
   private void verifyThatApplicationSaved(ApplicationCreateRequest applicationCreateRequest, int timesCalled) {
     ArgumentCaptor<ApplicationEntity> captor = ArgumentCaptor.forClass(ApplicationEntity.class);
     verify(applicationRepository, times(timesCalled)).save(captor.capture());
-    ApplicationEntity actualApplicationEntity = captor.getValue();
+    List<ApplicationEntity> capturedEntities = captor.getAllValues();
+    //ignore second saves that might happen due to linked applications for this assert
+    ApplicationEntity actualApplicationEntity = capturedEntities.getFirst();
 
     assertThat(actualApplicationEntity.getStatus()).isEqualTo(applicationCreateRequest.getStatus());
     assertThat(actualApplicationEntity.getLaaReference()).isEqualTo(applicationCreateRequest.getLaaReference());
-    RequestApplicationContent applicationContentDetails =
-        objectMapper.convertValue(applicationCreateRequest.getApplicationContent(), RequestApplicationContent.class);
+    ApplicationContent applicationContentDetails =
+        objectMapper.convertValue(applicationCreateRequest.getApplicationContent(), ApplicationContent.class);
     assertThat(actualApplicationEntity.getApplyApplicationId()).isEqualTo(
-        applicationContentDetails.getApplicationContent().getId());
+        applicationContentDetails.getId());
     assertThat(actualApplicationEntity.getUsedDelegatedFunctions()).isEqualTo(
-        applicationContentDetails.getApplicationContent().getProceedings().get(0)
+        applicationContentDetails.getProceedings().getFirst()
             .getUsedDelegatedFunctions());
     assertThat(actualApplicationEntity.getApplicationContent())
         .usingRecursiveComparison()
@@ -260,24 +423,25 @@ public class CreateApplicationTest extends BaseServiceTest {
   }
 
 
-    private void verifyThatCreateDomainEventSaved(DomainEventEntity expectedDomainEvent, int timesCalled)
-            throws JsonProcessingException {
-        ArgumentCaptor<DomainEventEntity> captor = ArgumentCaptor.forClass(DomainEventEntity.class);
-        verify(domainEventRepository, times(timesCalled)).save(captor.capture());
-        DomainEventEntity actualDomainEvent = captor.getValue();
+  private void verifyThatCreateDomainEventSaved(DomainEventEntity expectedDomainEvent, int timesCalled)
+      throws JacksonException {
+    ArgumentCaptor<DomainEventEntity> captor = ArgumentCaptor.forClass(DomainEventEntity.class);
+    verify(domainEventRepository, times(timesCalled)).save(captor.capture());
+    DomainEventEntity actualDomainEvent = captor.getValue();
         assertThat(expectedDomainEvent)
-                .usingRecursiveComparison()
-                .ignoringFields("createdAt", "data")
-                .isEqualTo(actualDomainEvent);
+        .usingRecursiveComparison()
+        .ignoringFields("createdAt", "data", "serviceName")
+        .isEqualTo(actualDomainEvent);
         assertThat(actualDomainEvent.getCreatedAt()).isNotNull();
+        assertThat(actualDomainEvent.getServiceName()).isEqualTo(ServiceName.CIVIL_APPLY);
 
-        Map<String, Object> expectedData = objectMapper.readValue(expectedDomainEvent.getData(), Map.class);
-        Map<String, Object> actualData = objectMapper.readValue(actualDomainEvent.getData(), Map.class);
-        assertThat(expectedData)
-                .usingRecursiveComparison()
-                .ignoringCollectionOrder()
-                .ignoringFields("createdDate")
-                .isEqualTo(actualData);
-        assertThat(actualData.get("createdDate")).isNotNull();
-    }
+    Map<String, Object> expectedData = objectMapper.readValue(expectedDomainEvent.getData(), Map.class);
+    Map<String, Object> actualData = objectMapper.readValue(actualDomainEvent.getData(), Map.class);
+    assertThat(expectedData)
+        .usingRecursiveComparison()
+        .ignoringCollectionOrder()
+        .ignoringFields("createdDate")
+        .isEqualTo(actualData);
+    assertThat(actualData.get("createdDate")).isNotNull();
+  }
 }
